<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/pnl1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ugs"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text" />

                    <TextView
                        android:id="@+id/tv_ugs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold"
                        tools:text="5000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eus"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text" />

                    <TextView
                        android:id="@+id/tv_eus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold"
                        tools:text="500" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ds"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text" />

                    <TextView
                        android:id="@+id/tv_ds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold"
                        tools:text="5000" />
                </LinearLayout>


            </LinearLayout>


            <View
                android:id="@id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/pnl1" />


            <LinearLayout
                android:id="@+id/pnl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/search_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_vehicle_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold"
                        tools:text="Vehicle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:text="@string/damage_capacity"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text" />

                    <TextView
                        android:id="@+id/tv_damage_capacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"
                        tools:text="100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/pnl_currentStation"
                        layout="@layout/station_item_cell"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/currentstation"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/cell_bg_grey"
                app:layout_constraintBottom_toTopOf="@+id/pnl_stations_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pnl2" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pnl_stations_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:minHeight="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <FrameLayout
                    android:id="@+id/pnl_previous"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow_back"
                        app:tint="@color/black" />
                </FrameLayout>


                <FrameLayout
                    android:id="@+id/pnl_next"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow_forward"
                        app:tint="@color/black" />

                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_stations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/pnl_next"
                    app:layout_constraintStart_toEndOf="@+id/pnl_previous"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>